[package]
name = "rusl"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["alloc"]
alloc = []

[dependencies]
linux-rust-bindings = { git = "https://github.com/MarcusGrass/linux-rust-bindings", rev = "3b64f3e389717632d9100a0300e9224e9a1d2fdc", features = ["all"] }
sc = "0.2.7"
unix-print = "0.1.0"