[package]
name = "tiny-cli"
version = "0.3.1"
edition = "2021"
license = "MPL-2.0"
readme = "../Readme.md"
repository = "https://github.com/MarcusGrass/tiny-std"
homepage = "https://github.com/MarcusGrass/tiny-std"
description = "Tiny cli argparser generator"
documentation = "https://docs.rs/tiny-std"
categories = ["command-line-utilities", "no-std"]
keywords = ["cli", "parse", "arg", "parser", "linux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dev-dependencies]
tiny-std = { path = "../tiny-std", features = ["alloc", "cli"]}
