[package]
name = "alloc-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-std = { path = "../../tiny-std", features = ["executable", "threaded", "global-allocator"] }
rusl = { path = "../../rusl", features = ["alloc"]}
unix-print = "0.1.0"
sc = "0.2.7"
