[package]
name = "alloc-st-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-lib = { path = "../test-lib", features = ["alloc"] }
tiny-std = { path = "../../tiny-std", features = ["executable", "alloc", "global-allocator"] }