[package]
name = "no-alloc-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-lib = { path = "../test-lib" }
tiny-std = { path = "../../tiny-std", default-features = false, features = ["executable"] }