[package]
name = "test-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-std = { path = "../../tiny-std", default-features = false, features = ["aux", "start", "symbols", "vdso"] }
rusl = { path = "../../rusl", default-features = false }

[features]
default = []
alloc = ["tiny-std/alloc", "rusl/alloc"]
threaded = ["alloc", "tiny-std/threaded"]
